fix(global): fix in overflow of selectors rows

--- a/src/styles/clients/clientSelectorModal.module.css
+++ b/src/styles/clients/clientSelectorModal.module.css
@@ -100,6 +100,7 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  max-width: 200px;
 }
 
 .table th {
